--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,11 @@ main {
   padding: 30px 0;
 }
 
+.title,
+.weather-app-city {
+  color: rgb(1, 62, 87);
+}
+
 .weather-window {
   background-color: white;
   max-width: 600px;
@@ -28,11 +33,12 @@ main {
 .weather-app-data {
   display: flex;
   justify-content: space-between;
+  margin-left: 30px;
 }
 
 .search-form-input {
-  background-color: rgb(208, 222, 228);
-  border: none;
+  background-color: rgb(249, 252, 253);
+  border-color: rgb(1, 62, 87);
   border-radius: 6px;
   width: 75%;
   padding: 15px 20px;
@@ -48,6 +54,7 @@ main {
   color: white;
   margin-left: 5px;
   font-size: 16px;
+  cursor: pointer;
 }
 
 .weather-app-city {
@@ -67,6 +74,7 @@ main {
 
 .weather-app-temperature {
   display: flex;
+  margin-right: 30px;
 }
 
 .weather-value {
@@ -75,14 +83,19 @@ main {
 }
 
 .weather-icon {
-  margin-top: -10px;  
-  width: 88px; 
-  height: 88px; 
+  margin-top: -10px;
+  width: 88px;
+  height: 88px;
 }
 
 .weather-unit {
   margin-top: 10px;
   font-size: 35px;
+}
+
+.weather-value,
+.weather-unit {
+  color: rgb(1, 62, 87);
 }
 
 footer {
